# triton-llama

./: example_chat_completion.py  example_text_completion.py  pyproject.toml  setup.py
src/llama/: __init__.py  generation.py  model.py
